chore: improve test parallelism - wip